# copilot-ld

./: .dictionary.eval.txt  .dictionary.txt  .dockerignore  .env.auth.gotrue.example  .env.auth.supabase.example  .env.docker.example  .env.example  .env.local.example  .env.storage.local.example  .env.storage.minio.example  .env.storage.supabase.example  .gitignore  .prettierignore  .prettierrc.json  .spellcheck-dict.txt  Dockerfile  Dockerfile.base  FIX_SUMMARY.md  Makefile  README.md  TODO.md  config.example.yml  docker-compose.yml  eslint.config.js  ontology_top_down.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
config/: .env.example  assistants.example.yml  assistants.yml  config.example.json  config.example.yml  eval.example.yml  tools.example.yml
docs/: CNAME  architecture.html  architecture.md  concepts.html  concepts.md  configuration.html  configuration.md  deployment.html  deployment.md  development.html  development.md  evaluation.md  getting-started.html  index.html  index.md  observability.md  processing.html  processing.md  reference.html  reference.md  teams.md  template.html.mustache
eval/: EVAL.md  SHAPE.md  STORY.md
examples/: README.md
infrastructure/: CHANGELOG.md
proto/: agent.proto  common.proto  graph.proto  history.proto  learn.proto  llm.proto  memory.proto  resource.proto  scope.proto  text.proto  tool.proto  trace.proto  vector.proto
schemas/: schema-definitions.example.json
scripts/: CHANGELOG.md  (+57 more)
services/document-processor-docling/: README.md  pyproject.toml  run.py
(+385 files in other folders)
