[project]
name = "copilot-docling"
version = "0.1.0"
description = "Simple document processing with Docling - converts various document formats to Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling[easyocr]>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["run.py"]

[tool.uv]
dev-dependencies = []
